Add Form Designer

--- a/src/Coevery.Web/DeveloperTools/Coevery.DeveloperTools.csproj
+++ b/src/Coevery.Web/DeveloperTools/Coevery.DeveloperTools.csproj
@@ -107,6 +107,22 @@
     <Content Include="Fields\Styles\datetime.css" />
     <Content Include="Fields\Styles\Images\move.gif" />
     <Content Include="Fields\Styles\media-gallery-admin.css" />
+    <Content Include="FormDesigner\Module.txt" />
+    <Content Include="FormDesigner\Placement.info" />
+    <Content Include="FormDesigner\Scripts\controllers\formdesignercontroller.js" />
+    <Content Include="FormDesigner\Scripts\Web.config" />
+    <Content Include="FormDesigner\Styles\formdesigner.css" />
+    <Content Include="FormDesigner\Styles\images\alwaysdisplay12.gif" />
+    <Content Include="FormDesigner\Styles\images\arrow.png" />
+    <Content Include="FormDesigner\Styles\images\line.png" />
+    <Content Include="FormDesigner\Styles\images\merge.png" />
+    <Content Include="FormDesigner\Styles\images\required12.gif" />
+    <Content Include="FormDesigner\Styles\images\split.png" />
+    <Content Include="FormDesigner\Styles\images\wrenchRemove.png" />
+    <Content Include="FormDesigner\Styles\Web.config" />
+    <Content Include="FormDesigner\Views\Admin\Index.cshtml" />
+    <Content Include="FormDesigner\Views\FormTemplate\FormDesignerLayout.cshtml" />
+    <Content Include="FormDesigner\Views\Web.config" />
     <Content Include="OptionSet\Module.txt" />
     <Content Include="Web.config" />
     <Content Include="Properties\AssemblyInfo.cs" />
@@ -218,6 +234,42 @@
     <Compile Include="Entities\ViewModels\EntityRecordTemplateViewModel.cs" />
     <Compile Include="Fields\Settings\UrlFieldEditorEvents.cs" />
     <Compile Include="Fields\Settings\UrlFieldSettings.cs" />
+    <Compile Include="FormDesigner\Controllers\AdminController.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="FormDesigner\Controllers\LayoutController.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="FormDesigner\Handlers\FormDesignerEntityEventsHandler.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="FormDesigner\Handlers\FormDesignerFieldEventsHandler.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="FormDesigner\Models\Column.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="FormDesigner\Models\Field.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="FormDesigner\Models\Row.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="FormDesigner\Models\Section.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="FormDesigner\Services\ClientRouteProvider.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="FormDesigner\Services\ILayoutManager.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="FormDesigner\Services\TemplateViewService.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="FormDesigner\ViewModels\FieldViewModel.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="OptionSet\Controllers\OptionItemController.cs" />
     <Compile Include="OptionSet\Drivers\OptionItemContainerPart.cs" />
     <Compile Include="OptionSet\Drivers\OptionItemPartDriver.cs" />
