Fix Date and Datetime field error

--- a/src/Coevery.Web/Core/Coevery.Core.csproj
+++ b/src/Coevery.Web/Core/Coevery.Core.csproj
@@ -73,6 +73,7 @@
     <Compile Include="Common\Routes.cs" />
     <Compile Include="Common\Services\NavigationManager.cs" />
     <Compile Include="Common\Services\SafeModeThemeSelector.cs" />
+    <Compile Include="Common\Shapes\Localization\DateTimeLocalization.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Common\Commands\FeatureCommands.cs" />
     <Compile Include="Settings\Descriptor\Records\ShellDescriptorRecord.cs" />
