--- a/src/Coevery.Web/Core/Coevery.Core.csproj
+++ b/src/Coevery.Web/Core/Coevery.Core.csproj
@@ -57,7 +57,16 @@
     <Reference Include="System.ComponentModel.DataAnnotations">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
+    <Reference Include="System.Net.Http" />
+    <Reference Include="System.Net.Http.Formatting, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\lib\aspnetwebapi\System.Net.Http.Formatting.dll</HintPath>
+    </Reference>
     <Reference Include="System.Web" />
+    <Reference Include="System.Web.Http, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\lib\aspnetwebapi\System.Web.Http.dll</HintPath>
+    </Reference>
     <Reference Include="System.Web.Mvc, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\lib\aspnetmvc\System.Web.Mvc.dll</HintPath>
@@ -146,6 +155,34 @@
     <Compile Include="Forms\Services\IFormProvider.cs" />
     <Compile Include="Forms\Shapes\EditorShapes.cs" />
     <Compile Include="Forms\Shapes\PropertyItemsBehavior.cs" />
+    <Compile Include="OptionSet\Controllers\OptionItemController.cs" />
+    <Compile Include="OptionSet\Drivers\OptionItemContainerPart.cs" />
+    <Compile Include="OptionSet\Drivers\OptionItemPartDriver.cs" />
+    <Compile Include="OptionSet\Drivers\OptionSetFieldDriver.cs" />
+    <Compile Include="OptionSet\Drivers\OptionSetPartDriver.cs" />
+    <Compile Include="OptionSet\Fields\OptionSetField.cs" />
+    <Compile Include="OptionSet\Handlers\OptionItemContainerPartHandler.cs" />
+    <Compile Include="OptionSet\Handlers\OptionItemPartHandler.cs" />
+    <Compile Include="OptionSet\Handlers\OptionSetPartHandler.cs" />
+    <Compile Include="OptionSet\Helpers\OptionItemExtensions.cs" />
+    <Compile Include="OptionSet\Helpers\PredicateBuilder.cs" />
+    <Compile Include="OptionSet\Migrations.cs" />
+    <Compile Include="OptionSet\Models\OptionItemContainerPartRecord.cs" />
+    <Compile Include="OptionSet\Models\OptionItemContentItem.cs" />
+    <Compile Include="OptionSet\Models\OptionItemContentItemPart.cs" />
+    <Compile Include="OptionSet\Models\OptionItemPart.cs" />
+    <Compile Include="OptionSet\Models\OptionItemPartRecord.cs" />
+    <Compile Include="OptionSet\Models\OptionItemsPart.cs" />
+    <Compile Include="OptionSet\Models\OptionSetPart.cs" />
+    <Compile Include="OptionSet\Models\OptionSetPartRecord.cs" />
+    <Compile Include="OptionSet\Permissions.cs" />
+    <Compile Include="OptionSet\Projections\OptionSetFieldValueProvider.cs" />
+    <Compile Include="OptionSet\Services\IOptionSetService.cs" />
+    <Compile Include="OptionSet\Services\OptionSetService.cs" />
+    <Compile Include="OptionSet\Settings\OptionSetFieldEditorEvents.cs" />
+    <Compile Include="OptionSet\Settings\OptionSetFieldSettings.cs" />
+    <Compile Include="OptionSet\Shapes.cs" />
+    <Compile Include="OptionSet\ViewModels\OptionSetFieldViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Common\Commands\FeatureCommands.cs" />
     <Compile Include="Settings\Descriptor\Records\ShellDescriptorRecord.cs" />
@@ -589,6 +626,7 @@
     <Content Include="Fields\Styles\Images\move.gif" />
     <Content Include="Fields\Styles\media-gallery-admin.css" />
     <Content Include="Forms\Module.txt" />
+    <Content Include="OptionSet\Module.txt" />
     <Content Include="Settings\Module.txt" />
     <Content Include="Settings\Placement.info" />
   </ItemGroup>
@@ -824,6 +862,45 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Fields\Views\Wrapper.Script.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="OptionSet\Placement.info" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="OptionSet\Views\DefinitionTemplates\OptionSetFieldSettings.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="OptionSet\Views\DefinitionTemplates\OptionSetFieldSettings.Edit.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="OptionSet\Views\DisplayTemplates\OptionSet.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="OptionSet\Views\EditorTemplates\Fields\OptionSetField.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="OptionSet\Views\EditorTemplates\Parts\Taxonomies.Term.Fields.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="OptionSet\Views\Fields\OptionSetField.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="OptionSet\Views\Items\Content-Term.Edit.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="OptionSet\Views\Parts.TermPart.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="OptionSet\Views\Taxonomy.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="OptionSet\Views\TaxonomyItem.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="OptionSet\Views\TaxonomyItemLink.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="OptionSet\Views\Web.config" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
