Reference change to core folder

--- a/src/Coevery.Web/Core/Coevery.Core.csproj
+++ b/src/Coevery.Web/Core/Coevery.Core.csproj
@@ -387,6 +387,16 @@
     <Compile Include="Projections\ViewModels\SortCriteriaEditViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Common\Commands\FeatureCommands.cs" />
+    <Compile Include="Reference\Fields\ReferenceField.cs" />
+    <Compile Include="Reference\Models\ManyToManyRelationshipModel.cs" />
+    <Compile Include="Reference\Models\OneToManyRelationshipModel.cs" />
+    <Compile Include="Reference\Models\ReferenceFieldViewModel.cs" />
+    <Compile Include="Reference\Models\ReferenceUpdateModel.cs" />
+    <Compile Include="Reference\Models\RelationshipModel.cs" />
+    <Compile Include="Reference\Records\ManyToManyRelationshipRecord.cs" />
+    <Compile Include="Reference\Records\OneToManyRelationshipRecord.cs" />
+    <Compile Include="Reference\Records\RelationshipRecord.cs" />
+    <Compile Include="Reference\Settings\ReferenceFieldSettings.cs" />
     <Compile Include="Settings\Descriptor\Records\ShellDescriptorRecord.cs" />
     <Compile Include="Settings\Descriptor\Records\ShellFeatureRecord.cs" />
     <Compile Include="Settings\Descriptor\Records\ShellParameterRecord.cs" />
