--- a/src/Coevery.Web/Core/Coevery.Core.csproj
+++ b/src/Coevery.Web/Core/Coevery.Core.csproj
@@ -103,6 +103,8 @@
     <Compile Include="Common\Shapes\Localization\DateTimeLocalization.cs" />
     <Compile Include="Common\Utilities\LazyField.cs" />
     <Compile Include="Entities\Drivers\EntityMetadataPartDriver.cs" />
+    <Compile Include="Entities\DynamicTypeGeneration\DynamicContentsDriver.cs" />
+    <Compile Include="Entities\DynamicTypeGeneration\DynamicContentsHandler.cs" />
     <Compile Include="Entities\Events\IEntityDataEvents.cs" />
     <Compile Include="Entities\Events\IEntityEvents.cs" />
     <Compile Include="Entities\Events\IFieldEvents.cs" />
